<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Application MoveOn</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_deconnexion">Deconnexion</string>
    <string name="title_activity_main">MoveOn</string>
    <string name="title_add_event_activity">Ajouter un évènement</string>
    <string name="title_login_activity">Se connecter</string>
    <string name="add_user_activity">Inscription</string>
    <string name="image_content_description">Logo MoveOn</string>
    <string name="create_account">Créer un compte</string>
    <string name="email">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="menu_search">Recherche</string>
    <string name="menu_trier">Tri par</string>
    <string name="menu_share">Partager via</string>
    <string name="title_accueil_activity">Accueil</string>
    <string name="title_map_activity">Localiser l\'évènement</string>
    <string name="title_map_locate_activity">Evènements les plus proches</string>
    <string name="hint_mail">"Ici : L'adresse email de l'utilisateur"</string>
    <string name="hint_pass">"Ici : Le mot de passe de l'utilisateur"</string>
    <string name="email_format_error">Format de l\'adresse mail incorrect</string>
    <string name="existing_account_error">Compte inexistant</string>
    <string name="email_or_password_empty">Les deux champs doivent être remplis</string>
    <string name="label_title">Titre :</string>
    <string name="label_description">Description :</string>
    <string name="label_hour_beginning">Heure de début :</string>
    <string name="label_hour_end">Heure de fin :</string>
    <string name="label_location">Lieu :</string>
    <string name="label_picture">Image :</string>
    <string name="label_date">Date :</string>
    <string name="label_name">Nom :</string>
    <string name="label_firstname">Prénom :</string>
    <string name="label_email">Email :</string>
    <string name="label_password">Mot de passe :</string>
    <string name="label_password_check">Mot de passe (vérification) :</string>
    <string name="load_picture">Parcourir...</string>
    <string name="load_location">Localiser...</string>
    <string name="label_find">Valider!</string>
    <string name="label_find_txt">Adresse de l\'évènement</string>
    <string name="label_previous">Précédent</string>
    <string name="label_next">Suivant</string>
    <string name="add_event">Créer</string>
    <string name="add_user">S\'inscrire</string>
    <string name="pref_user_localisation">Localisation</string>
    <string name="pref_km_summary">Périmètre de recherche d\'evenements autour de vous (km)</string>
    <string name="pref_km">Périmètre de recherche (km)</string>
    <string name="pref_event_display_settings">Affichage des evenements</string>
    <string name="pref_event_display">Nombre d\'evenements</string>
    <string name="pref_event_display_summary">Nombre d\'evenements affichés</string>
    <string name="pref_notification_setting">Notifications</string>
    <string name="pref_notification">Recevoir les notifications</string>
    <string name="pref_notification_summary">Recevoir les notifications concernant les evenements</string>
    <string name="pref_notification_frequency_summary">Fréquence de vérification sur les evenements</string>
    <string name="pref_notification_frequency">Fréquence des notifications</string>
    <string name="connection_error">Veuillez activer votre connexion Internet</string>
    <string name="gps_error">Veuillez activer votre puce gps</string>
    <string name="button_parameter">Paramètres</string>
    <string name="app_id">722576574443679</string>
    <string name="title_activity_facebook">FacebookActivity</string>

</resources>