<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapActivity" >    
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:orientation="horizontal" >	    
	    
	    <Button 
	        android:id="@+id/btn_find"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:text="@string/label_find" 
	        android:layout_alignParentRight="true" />
	    
	    <EditText
	        android:id="@+id/et_location"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"        
	        android:inputType="text" 
	        android:hint="@string/label_find_txt"
	        android:layout_toLeftOf="@id/btn_find" />
	    
    </RelativeLayout>    

    <fragment 
		android:id="@+id/map"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
        android:layout_weight=".6"
		class="com.google.android.gms.maps.SupportMapFragment" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:orientation="horizontal" >	    
	    
	    <Button 
	        android:id="@+id/btn_previous"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:text="@string/label_previous" 
	        android:visibility="gone" />
	    
	    <Button 
	        android:id="@+id/btn_validate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:text="@string/label_find" 
	        android:visibility="gone" />
	    
	    <Button 
	        android:id="@+id/btn_next"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:text="@string/label_next"  
	        android:visibility="gone" />
	    
    </LinearLayout>  

</LinearLayout>