 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
	
	<GridLayout
    android:id="@+id/GridLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/padding_large"
    android:columnCount="3"
    android:layout_gravity="center_horizontal"
    android:rowCount="6" >
	    
		<TextView
		    android:id="@+id/txt_title"
		    android:textStyle="bold|italic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="@dimen/normal_padding"
	        android:text="@string/label_title"
	        android:textSize="@dimen/normal_text_size"
	        android:layout_column="0"
	        android:layout_row="0"
	        android:layout_columnSpan="2"
	        android:textColor="@color/black_color" />
		<EditText
	        android:id="@+id/title_event"
	        android:layout_width="@dimen/large_padding"
	        android:layout_height="wrap_content"
	        android:layout_column="2"
	        android:layout_row="0"
	        android:background="@drawable/text_edit_style"
	        android:inputType="text"/>

	<TextView
		    android:id="@+id/txt_description"
		    android:textStyle="bold|italic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="@dimen/normal_padding"
	        android:text="@string/label_description"
	        android:textSize="@dimen/normal_text_size"
	        android:layout_column="0"
	        android:layout_row="1"
	        android:layout_columnSpan="2"
	        android:textColor="@color/black_color" />
		<EditText
	        android:id="@+id/description_event"
	        android:layout_width="@dimen/large_padding"
	        android:layout_height="wrap_content"
	        android:layout_column="2"
	        android:layout_row="1"
	        android:background="@drawable/text_edit_style"
	        android:inputType="text"/>
	
		<TextView
		    android:id="@+id/txt_hour"
		    android:layout_gravity="center_vertical"
		    android:textStyle="bold|italic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_hour"
	        android:paddingTop="@dimen/normal_padding"
	        android:textSize="@dimen/normal_text_size"
	        android:layout_column="0"
	        android:layout_row="2"
	        android:layout_columnSpan="2"
	        android:textColor="@color/black_color" />
		<ImageButton
	         android:id="@+id/hourButton"
	         android:layout_width="wrap_content"  
			android:layout_height="wrap_content" 
			android:paddingTop="@dimen/normal_padding" 
			android:adjustViewBounds="true"  
			android:maxWidth="42dp"  
			android:maxHeight="42dp"  
			android:scaleType="fitCenter"
			android:layout_column="2"
	        android:layout_row="2" 
	         android:src="@drawable/hour_icon" />
	   
		<TextView
		    android:id="@+id/txt_location"
		    android:layout_gravity="center_vertical"
		    android:textStyle="bold|italic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_location"
	        android:paddingTop="@dimen/normal_padding"
	        android:textSize="@dimen/normal_text_size"
	        android:layout_column="0"
	        android:layout_row="3"
	        android:textColor="@color/black_color" />
		<ImageView
	        android:id="@+id/picture_check_location"
	        android:layout_gravity="center_vertical"
	        android:paddingTop="@dimen/normal_padding"
	        android:layout_width="wrap_content"  
			android:layout_height="wrap_content"  
			android:adjustViewBounds="true"  
			android:maxWidth="42dp"  
			android:maxHeight="42dp"  
			android:scaleType="fitCenter" 
			android:layout_column="1"
	        android:layout_row="3"
	        android:src="@drawable/cross" />
		<Button
	        android:id="@+id/button_location"
	        android:layout_gravity="right"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="@dimen/normal_padding"
	        android:text="@string/load_location"
	        android:layout_column="2"
	        android:layout_row="3">
		</Button>
	
		<TextView
		    android:id="@+id/txt_picture"
		    android:layout_gravity="center_vertical"
		    android:textStyle="bold|italic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="@dimen/normal_padding"
	        android:text="@string/label_picture"
	        android:textSize="@dimen/normal_text_size"
	        android:layout_column="0"
	        android:layout_row="4"
	        android:textColor="@color/black_color" />
		<ImageView
	        android:id="@+id/sample_picture_event"
	        android:layout_gravity="center_vertical"
	        android:layout_width="wrap_content"  
			android:layout_height="wrap_content"  
			android:paddingTop="@dimen/normal_padding"
			android:adjustViewBounds="true"  
			android:maxWidth="42dp"  
			android:maxHeight="42dp"  
			android:scaleType="fitCenter" 
			android:layout_column="1"
	        android:layout_row="4"
	        android:src="@drawable/picture_missing"
	        android:contentDescription="@string/image_content_description" />
		<Button
	        android:id="@+id/button_picture"
	        android:paddingTop="@dimen/normal_padding"
	        android:layout_gravity="right"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="2"
	        android:layout_row="4"
	        android:text="@string/load_picture">
		</Button>
		
		<EditText
		    android:id="@+id/txt_date"
		    android:textStyle="bold|italic"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/normal_text_size"
	        android:paddingTop="@dimen/normal_padding"
	        android:layout_column="0"
	        android:layout_row="5"
	        android:layout_columnSpan="2"
	        android:background="@drawable/text_edit_style"
	        android:textColor="@color/black_color"/>
		<ImageButton
	         android:id="@+id/calendarButton"
	         android:layout_width="wrap_content"  
			android:layout_height="wrap_content"  
			android:adjustViewBounds="true"  
			android:paddingTop="@dimen/normal_padding"
			android:maxWidth="42dp"  
			android:maxHeight="42dp"  
			android:scaleType="fitCenter" 
			android:layout_column="2"
	        android:layout_row="5"
	         android:src="@drawable/calendar_icon" />
</GridLayout>
</ScrollView>
<Button
       android:id="@+id/button_add_event"
       android:layout_gravity="center_vertical"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
	   android:layout_alignParentBottom="true"  
       android:text="@string/add_event">
</Button>
</RelativeLayout>